fix: answers yellow color to make the text readable

--- a/src/app/host/host-answer/host-answer.component.scss
+++ b/src/app/host/host-answer/host-answer.component.scss
@@ -35,6 +35,7 @@
     gap: 2.5rem;
 
     .box {
+        background-color: orange;
         padding: 2rem;
         font-size: 1.8rem;
         font-weight: 600;
